fix copy to clipboard and overflow issues

--- a/_common.scss
+++ b/_common.scss
@@ -13,6 +13,7 @@ body {
 main {
   display: flex;
   height: 616px;
+  overflow: hidden;
 }
 
 a {
